	read/modify/store meshes onto disk.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Fix OuterVertex constructor.
	Implement vertex list, this is needed to save OEMM instances.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Replace
	f.isOuter() test on triangles by isSkippedTriangle() to also detect
	non-writable triangles.

Fri Aug 31 15:21:26 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/QSortedTree.java: New getRootValue()
	method.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Fix
	penalty when edge cannot be processed, QSortedTree.getRootValue()
	gives a better value.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Fix cost()
	computation by using definitive location of vertex.

Sun Aug 26 01:46:56 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMPopulate.java: Run
	RawStorage.countTriangles() to count triangles from new triangle soup.
	Thanks to Jan Kozusznik for the report.

Sun Aug 12 17:18:01 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Fix
	off-by-one error in processAllHalfEdges(), last edge was not processed.
	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Do not implicitly
	multiply edge length by sqrt(2).  Fix checking of too near vertices.

Sat Aug 11 16:27:04 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Modify main
	class arguments.

Sat Aug 11 02:59:10 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: This class had
	been broken by changes in QSortedTree interface.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New area() and
	checkNewRingNormals() abstract methods.